5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1764_1576.log
== TEST (2019-05-23 00:25:51) 
-- CODE:
from numpy import *
e=array(eval(input("eusapia: ")))
b=array(eval(input("barsanulfo: ")))
p=0
c.e=0
c.b=0
while(p < size(e)):
	if ((e[p]==11):
		if (b[p]==22):
			c.b = c.b + 1
		elif (b[p]==33):
			c.e = c.e + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	c.e = c.e + 1
		elif(b[p]==33):
		 	c.b = c.b + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	c.b = c.b + 1
		elif(b[p]==22):
		 	c.e = c.e + 1
	p=p+1
print(size(e))
if(sum(c.e) > sum(c.b)):
	print("EUSAPIA")
elif(sum(c.e) < sum(c.b)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- ERROR:
File "XXXX", line 8
    if ((e[p]==11):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:26:37) 
-- CODE:
from numpy import *
e=array(eval(input("eusapia: ")))
b=array(eval(input("barsanulfo: ")))
p=0
c.e=0
c.b=0
while(p < size(e)):
	if (e[p]==11):
		if (b[p]==22):
			c.b = c.b + 1
		elif (b[p]==33):
			c.e = c.e + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	c.e = c.e + 1
		elif(b[p]==33):
		 	c.b = c.b + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	c.b = c.b + 1
		elif(b[p]==22):
		 	c.e = c.e + 1
	p=p+1
print(size(e))
if(sum(c.e) > sum(c.b)):
	print("EUSAPIA")
elif(sum(c.e) < sum(c.b)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:30:47) 
-- CODE:
from numpy import *
e = array(eval(input("eusapia: ")))
b = array(eval(input("barsanulfo: ")))
p = 0
ce = 0
cb = 0
while (p < size(e)):
	if (e[p]==11):
		if (b[p]==22):
			cb = cb + 1
		elif (b[p]==33):
			ce = ce + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	ce = ce + 1
		elif(b[p]==33):
		 	cb = cb + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	cb = cb + 1
		elif(b[p]==22):
		 	ce = ce + 1
	p=p+1
print(size(e))
if (sum(c.e) > sum(c.b)):
	print("EUSAPIA")
elif (sum(c.e) < sum(c.b)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:31:25) 
-- CODE:
from numpy import *
e = array(eval(input("eusapia: ")))
b = array(eval(input("barsanulfo: ")))
p = 0
ce = 0
cb = 0
while (p < size(e)):
	if (e[p]==11):
		if (b[p]==22):
			cb = cb + 1
		elif (b[p]==33):
			ce = ce + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	ce = ce + 1
		elif(b[p]==33):
		 	cb = cb + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	cb = cb + 1
		elif(b[p]==22):
		 	ce = ce + 1
	p=p+1
print(size(e))
if (sum(ce) > sum(cb)):
	print("EUSAPIA")
elif (sum(ce) < sum(cb)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:31:42) 
-- CODE:
from numpy import *
e = array(eval(input("eusapia: ")))
b = array(eval(input("barsanulfo: ")))
p = 0
ce = 0
cb = 0
while (p < size(e)):
	if (e[p]==11):
		if (b[p]==22):
			cb = cb + 1
		elif (b[p]==33):
			ce = ce + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	ce = ce + 1
		elif(b[p]==33):
		 	cb = cb + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	cb = cb + 1
		elif(b[p]==22):
		 	ce = ce + 1
	p=p+1
print(size(e))
if (sum(ce) > sum(cb)):
	print("EUSAPIA")
elif (sum(ce) < sum(cb)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 00:32:06) 
-- CODE:
from numpy import *
e = array(eval(input("eusapia: ")))
b = array(eval(input("barsanulfo: ")))
p = 0
ce = 0
cb = 0
while (p < size(e)):
	if (e[p]==11):
		if (b[p]==22):
			cb = cb + 1
		elif (b[p]==33):
			ce = ce + 1
	elif (e[p]==22):
		if (b[p]==11):
		 	ce = ce + 1
		elif(b[p]==33):
		 	cb = cb + 1
	elif (e[p]==33):
		if(b[p]==11):
		 	cb = cb + 1
		elif(b[p]==22):
		 	ce = ce + 1
	p=p+1
print(size(e))
if (sum(ce) > sum(cb)):
	print("EUSAPIA")
elif (sum(ce) < sum(cb)):
	print("BARSANULFO")
else:
	print("EMPATE")
		 
-- EXECUTION TIME:
0.489941
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
